[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
pin-project = "1.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
